--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npx eleventy --serve",
     "build": "eleventy",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist/labex-11ty"
   },
   "repository": {
     "type": "git",
